# penny-tracker

./: .gitignore  Makefile  README.md  check_tsv.py  debug_modal.py  environment-dev.yml  environment-new.yml  environment.yml  fb_scraper.py  find_chrome.py  fix_width.py  index.html  launch_chrome.sh  parse_file.sh  pyproject.toml  rebelsavings.py  requirements.txt  run.sh  test_home_depot.py  update.sh
config/: .env.example  scraper_config.yaml
src/penny-tracker/: csv2tsv.sh  rebelsavings.py  report.html
src/penny-tracker/scraper/: __init__.py  base_scraper.py  cli.py  facebook_scraper.py  utils.py
tests/: test_scraper.py
